fix: align hamburger icon on mobile

--- a/_css/components.css
+++ b/_css/components.css
@@ -330,7 +330,8 @@
 }
 
 .header__button--mobile {
-  align-self: flex-end;
+  align-self: flex-start;
+  margin-top: 4px;
   display: none;
 
   @media (max-width: calc(1000 / 16 * 1rem)) {
